Add CSS and style site

--- a/index.html
+++ b/index.html
@@ -4,73 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Style Guide</title>
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Ubuntu:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Website Style Guide</h1>
     <section>
         <h2>Colors</h2>
-        <div id="color-1" class="color-swatch">
+        <div id="color-1" class="section-div">
             <h3>Dark Purple</h3>
             <p>#331832</p>
         </div>
-        <div id="color-2" class="color-swatch">
+        <div id="color-2" class="section-div">
             <h3>Ruby</h3>
             <p>#D81E5B</p>
         </div>
-        <div id="color-3" class="color-swatch">
+        <div id="color-3" class="section-div">
             <h3>Tart Orange</h3>
             <p>#F0544F</p>
         </div>
-        <div id="color-4" class="color-swatch">
+        <div id="color-4" class="section-div">
             <h3>Opal</h3>
             <p>#C6D8D3</p>
         </div>
-        <div id="color-5" class="color-swatch">
+        <div id="color-5" class="section-div">
             <h3>Papaya Whip</h3>
             <p>#FDF0D5</p>
         </div>
     </section>
     <section>
         <h2>Fonts</h2>
-        <div>
-            <h3>Font Name 1</h3>
+        <div  id="font-1" class="section-div font-div">
+            <h3>Raleway</h3>
             <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
+            <p><emphasis>The quick brown fox jumps over the lazy dog.</emphasis></p>
+            <p><strong>The quick brown fox jumps over the lazy dog.</strong></p>
         </div>
-        <div>
-            <h3>Font Name 2</h3>
+        <div id="font-2" class="section-div font-div">
+            <h3>Ubuntu</h3>
             <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
+            <p><emphasis>The quick brown fox jumps over the lazy dog.</emphasis></p>
+            <p><strong>The quick brown fox jumps over the lazy dog.</strong></p>
         </div>
-        <div>
-            <h3>Font Name 3</h3>
+        <div id="font-3" class="section-div font-div">
+            <h3>Source Code Pro</h3>
             <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
-            <p>The quick brown fox jumps over the lazy dog.</p>
+            <p><emphasis>The quick brown fox jumps over the lazy dog.</emphasis></p>
+            <p><strong>The quick brown fox jumps over the lazy dog.</strong></p>
         </div>
     </section>
     <section>
         <h2>Text Styles</h2>
-        <h1>H1: Main page heading</h1>
-        <ul>
-            <li>List Item 1</li>
-            <li>List Item 2</li>
-            <li>List Item 3</li>
-        </ul>
-        <h1>H2: Suheading</h1>
-        <ul>
-            <li>List Item 1</li>
-            <li>List Item 2</li>
-            <li>List Item 3</li>
-        </ul>
-        <h1>P: Paragraph text</h1>
-        <ul>
-            <li>List Item 1</li>
-            <li>List Item 2</li>
-            <li>List Item 3</li>
-        </ul>
+        <div class="section-div style-div">
+            <h1>H1: Main page heading</h1>
+            <ul>
+                <li>Font Weight: bold</li>
+                <li>Font Size: 32 px</li>
+                <li>Font Family: Raleway</li>
+            </ul>
+        </div>
+        <div class="section-div style-div">
+            <h2>H2: Suheading</h2>
+            <ul>
+                <li>Font Weight: bold</li>
+                <li>Font Size: 24 px</li>
+                <li>Font Family: Ubuntu</li>
+            </ul>
+        </div>
+        <div class="section-div style-div">
+            <p>P: Paragraph text</p>
+            <ul>
+                <li>Font Weight: normal</li>
+                <li>Font Size: 16 px</li>
+                <li>Font Family: Ubuntu</li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
